Add 'behindReverseProxy' config
This configuration value enables to exclude the 'proxy_set_header X-Forwarded-Proto $scheme;' setting from the nginx configuration so Harbor can be used behind other reverse proxy such as HAProxy.

--- a/bitnami/harbor/templates/nginx/configmap-http.yaml
+++ b/bitnami/harbor/templates/nginx/configmap-http.yaml
@@ -53,8 +53,10 @@ data:
           proxy_set_header X-Real-IP $remote_addr;
           proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 
+          {{- if not .Values.nginx.behindReverseProxy }}
           # When setting up Harbor behind other proxy, such as an Nginx instance, remove the below line if the proxy already has similar settings.
           proxy_set_header X-Forwarded-Proto $scheme;
+          {{- end }}
 
           proxy_buffering off;
           proxy_request_buffering off;
@@ -66,8 +68,10 @@ data:
           proxy_set_header X-Real-IP $remote_addr;
           proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 
+          {{- if not .Values.nginx.behindReverseProxy }}
           # When setting up Harbor behind other proxy, such as an Nginx instance, remove the below line if the proxy already has similar settings.
           proxy_set_header X-Forwarded-Proto $scheme;
+          {{- end }}
 
           proxy_buffering off;
           proxy_request_buffering off;
@@ -79,8 +83,10 @@ data:
           proxy_set_header X-Real-IP $remote_addr;
           proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 
+          {{- if not .Values.nginx.behindReverseProxy }}
           # When setting up Harbor behind other proxy, such as an Nginx instance, remove the below line if the proxy already has similar settings.
           proxy_set_header X-Forwarded-Proto $scheme;
+          {{- end }}
 
           proxy_buffering off;
           proxy_request_buffering off;
@@ -92,8 +98,10 @@ data:
           proxy_set_header X-Real-IP $remote_addr;
           proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 
+          {{- if not .Values.nginx.behindReverseProxy }}
           # When setting up Harbor behind other proxy, such as an Nginx instance, remove the below line if the proxy already has similar settings.
           proxy_set_header X-Forwarded-Proto $scheme;
+          {{- end }}
 
           proxy_buffering off;
           proxy_request_buffering off;
@@ -109,8 +117,11 @@ data:
           proxy_set_header X-Real-IP $remote_addr;
           proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 
+          {{- if not .Values.nginx.behindReverseProxy }}
           # When setting up Harbor behind other proxy, such as an Nginx instance, remove the below line if the proxy already has similar settings.
           proxy_set_header X-Forwarded-Proto $scheme;
+          {{- end }}
+
           proxy_buffering off;
           proxy_request_buffering off;
         }
@@ -121,8 +132,10 @@ data:
           proxy_set_header X-Real-IP $remote_addr;
           proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 
+          {{- if not .Values.nginx.behindReverseProxy }}
           # When setting up Harbor behind other proxy, such as an Nginx instance, remove the below line if the proxy already has similar settings.
           proxy_set_header X-Forwarded-Proto $scheme;
+          {{- end }}
 
           proxy_buffering off;
           proxy_request_buffering off;
